<resources>
    <string name="app_name">Fish Hub</string>
    <string name="title_home">Search</string>
    <string name="title_listings">Live Offers</string>
    <string name="title_orders">My Orders</string>
    <string name="order_existing">Current</string>
    <string name="order_new">New</string>
    <string name="order_past">Past</string>
    <string name="order_existing_label">Live Inventory</string>
    <string name="order_new_label">Create new Listing</string>
    <string name="order_past_label">Past Inventory</string>
    <string name="search_hint">Search by name</string>
    <string name="creator_size_small">Small</string>
    <string name="creator_size_medium">Medium</string>
    <string name="creator_size_large">Large</string>
    <string name="label_weight">Weight</string>
    <string name="label_price">Price</string>
    <string name="catch_location">Location Ex. Miramar/Juhu Beach</string>
    <string name="label_catch_time">Catch Details</string>
    <string name="label_sell_time">Sell Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="legend">\???</string>
    <string name="tutorial_desc_1">Seafood is an important source of food, and plays an important role in providing nutrition to many coastal communities around the world.  The Food and Agriculture Organization (FAO) estimates that approximately 96.4 million tonnes of seafood is harvested from the sea each year (SOFIA- 2020).</string>
    <string name="tutorial_desc_2">The demand for seafood and the advances in technology have led to fishing practices that are depleting fish stocks around the world. To continue relying on the ocean as an important food source we need to employ sustainable fishing practices.</string>
    <string name="tutorial_desc_3">When fish is taken from the sea faster than populations can reproduce, it is known as overfishing. Indiscriminate fishing also results in the capture of unintended species such as whales, dolphins and turtles, fish species that are not of high commercial value and juveniles of fish species. </string>
    <string name="tutorial_desc_4">Some fishing practices like bottom trawling and blast fishing can be destructive to marine ecosystems, in turn damaging fish stocks. These methods are used mainly because they are effective in the capture of large amounts of fish in a short period of time but are not sustainable in the long run.</string>
    <string name="tutorial_desc_5">Overfishing and habitat destruction not only leads to a decreased amount of species biodiversity it also impacts the long-term food security for people who consume these species regularly. Livelihoods of fishing communities who depend on these fish species and fisheries are also be negatively affected. </string>
    <string name="tutorial_desc_6">As consumers, buying sustainably sourced seafood and preferentially choosing to eat fish species from stocks that are healthy helps encourage sustainable fisheries. FishHub lets you know where your fish comes from and how it is caught so you can choose more sustainable options. </string>
    <string name="tutorial_desc_7">How does FishHub do this?
</string>
    <string name="tutorial_desc_8">All seafood sold on FishHub is harvested at a rate that allows stock to reproduce with no damage to the habitat. This means catching sustainable quantities of fish through small-scale fisheries and avoiding fishing species during their breeding season. </string>
    <string name="tutorial_desc_9">We ensure that the fishworkers we partner with do not catch non-commercial species, endangered species and juveniles along with the target catch, through selective and mindful fishing practices. </string>
    <string name="tutorial_desc_10">FishHub ensures that the fishing practices we encourage offers food security, sustained livelihood opportunities for coastal communities, generates less waste and requires less energy. </string>
    <string name="tutorial_title">Sustainability FAQ</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone number</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="user_not_exists">User doesn\'t exist. Please create a new account</string>
    <string name="wrong_password">The password doesn\'t match the username</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="confirm_mismatch_password">Password doesn\'t match confirm password</string>
    <string name="invalid_phone">Not a valid phone number</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Sign-up failed"</string>
    <string name="action_register">Create Account</string>
    <string name="register_form_error">Please enter valid values for signing up</string>
    <string name="login_form_error">Please enter valid values for Login</string>
    <string name="turn_location_setting_on">Please turn on the location setting on the phone</string>
    <string name="anchovy">Anchovy</string>
    <string name="bombay_duck">Bombay Duck</string>
    <string name="giant_sea_perch">Giant Sea Perch</string>
    <string name="sole">Sole</string>
    <string name="pomfret">Pomfret</string>
    <string name="salmon">Indian Salmon</string>
    <string name="kingfish">Kingfish</string>
    <string name="red_snapper">Red Snapper</string>
    <string name="grouper">Grouper</string>
    <string name="tuna">Tuna</string>
    <string name="peral_spot">Pearl Spot</string>
    <string name="ladyfish">Lady Fish</string>
    <string name="hilsa">Hilsa</string>
    <string name="mackerel">Indian Mackerel</string>
    <string name="black_pomfret">Black Pomfret</string>
    <string name="mullet">Flathead Grey Mullet</string>
    <string name="sardine">Indian Oil Sardine</string>
    <string name="croaker">Croaker</string>
    <string name="shark">Sharks</string>
    <string name="ray">Rays</string>
    <string name="ghole">Ghole</string>
    <string name="murrel">Murrel</string>
    <string name="seerfish">Seerfish</string>
    <string name="sea_veral">Sea Veral</string>
    <string name="squid">Squid</string>
    <string name="tiger_prawn">Tiger prawn</string>
    <string name="prawns">Prawns</string>
    <string name="shrimp">Shrimp</string>
    <string name="lobster">Spiny Lobster</string>
    <string name="crab">Mud Crab</string>
    <string name="short_necked_clams">Short neck clams</string>
    <string name="mussels">Mussels</string>
    <string name="mahi_mahi">Mahi Mahi</string>
    <string name="coconut_para">Coconut para</string>
    <string name="anchovy_common_name">Indian anchovy</string>
    <string name="bombay_duck_common_name">Bombay Duck</string>
    <string name="giant_sea_perch_common_name">Bhekti/ Seabass</string>
    <string name="sole_common_name">Malabar Sole/Soles</string>
    <string name="pomfret_common_name">Silver pomfret</string>
    <string name="salmon_common_name">Indian Salmon</string>
    <string name="kingfish_common_name">Black kingfish/Cobia</string>
    <string name="red_snapper_common_name">Red Snapper</string>
    <string name="grouper_common_name">Grouper</string>
    <string name="tuna_common_name">Yellowfin tuna</string>
    <string name="peral_spot_common_name">Pearl Spot</string>
    <string name="ladyfish_common_name">Kane fish</string>
    <string name="hilsa_common_name">Hilsa shad</string>
    <string name="mackerel_common_name">Indian Mackerel</string>
    <string name="black_pomfret_common_name">Black Pomfret</string>
    <string name="mullet_common_name">Mullet</string>
    <string name="sardine_common_name">Oil Sardine</string>
    <string name="croaker_common_name">Croaker</string>
    <string name="shark_common_name">Sharks</string>
    <string name="ray_common_name">Rays</string>
    <string name="ghole_common_name">Ghol</string>
    <string name="murrel_common_name">Snake head/Murrel</string>
    <string name="seerfish_common_name">King seer</string>
    <string name="sea_veral_common_name">Greater lizard fish</string>
    <string name="squid_common_name">Indian Squid</string>
    <string name="tiger_prawn_common_name">Jumbo tiger</string>
    <string name="prawns_common_name">Prawns</string>
    <string name="shrimp_common_name">Shrimp</string>
    <string name="lobster_common_name">Rock lobster</string>
    <string name="crab_common_name">Mud/swim crab</string>
    <string name="short_necked_clams_common_name">Black/shortneck clam</string>
    <string name="mussels_common_name">Green mussel</string>
    <string name="mahi_mahi_common_name">Mahi Mahi</string>
    <string name="coconut_para_common_name">Talang queenfish</string>
    <string name="anchovy_scientific_name">Stolephorus indicus</string>
    <string name="bombay_duck_scientific_name">Harpadon nehereus</string>
    <string name="giant_sea_perch_scientific_name">Lates calcarifer</string>
    <string name="sole_scientific_name">Brachirus panoides</string>
    <string name="pomfret_scientific_name">Pampus argenteus</string>
    <string name="salmon_scientific_name">Eleutheronema tetradactylum</string>
    <string name="kingfish_scientific_name">Scomberomorus guttatus </string>
    <string name="red_snapper_scientific_name">Lutjanus spp.</string>
    <string name="grouper_scientific_name">Epinephelus spp.</string>
    <string name="tuna_scientific_name">Tunas - Thunnus albacares</string>
    <string name="peral_spot_scientific_name">Etroplus suratensis</string>
    <string name="ladyfish_scientific_name">Sillago sihama</string>
    <string name="hilsa_scientific_name">Tenualosa ilisha</string>
    <string name="mackerel_scientific_name">Rastrelliger kanagurta</string>
    <string name="black_pomfret_scientific_name">Parastromateus niger</string>
    <string name="mullet_scientific_name">Mugil cephalus</string>
    <string name="sardine_scientific_name">Sardinella longiceps</string>
    <string name="croaker_scientific_name">Otolithes/Johnius/Johniops</string>
    <string name="shark_scientific_name">Selachimorpha</string>
    <string name="ray_scientific_name">Batoidea</string>
    <string name="ghole_scientific_name">Protonibea diacanthus</string>
    <string name="murrel_scientific_name">Channa striata</string>
    <string name="seerfish_scientific_name">Scomberomorus commerson</string>
    <string name="sea_veral_scientific_name">Saurida tumbil</string>
    <string name="squid_scientific_name">Uroteuthis duvauceli</string>
    <string name="tiger_prawn_scientific_name">Penaeus monodon</string>
    <string name="prawns_scientific_name">Penaeus Spp</string>
    <string name="shrimp_scientific_name">Non penaeid</string>
    <string name="buy">Place Order</string>
    <string name="cancel">Cancel</string>
    <string name="status_adbundant">Abundant</string>
    <string name="status_declining">Declining</string>
    <string name="status_depleted">Depleted</string>
    <string name="status_not_major_fishery">Not a major fishery</string>
    <string name="status_banned">Prohibited</string>
    <string name="catch_location_label">Catch Location</string>
    <string name="seller_rating_label">Rating</string>
    <string name="sellers_label">Seller</string>
    <string name="sell_location_label">Sell Location</string>
    <string name="price_label">Price</string>
    <string name="availability_label">Available</string>
    <string name="qty_label">Buy</string>
    <string name="total_label">Total</string>
</resources>