<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_half"
        android:layout_marginRight="@dimen/padding_double"
        android:background="@drawable/search_background"
        app:iconifiedByDefault="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@null"
        app:queryHint="@string/search_hint" />


    <ImageView
        android:id="@+id/sustainable"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sustainable_header"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

    <TextView
        android:id="@+id/legend_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:paddingLeft="@dimen/padding_double"
        android:paddingTop="@dimen/padding_standard"
        android:paddingRight="@dimen/padding_double"
        android:paddingBottom="@dimen/padding_standard"
        android:text="@string/status_depleted"
        android:textColor="@color/species_background_red"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/legend_2"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

    <TextView
        android:id="@+id/legend_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:paddingLeft="@dimen/padding_double"
        android:paddingTop="@dimen/padding_standard"
        android:paddingRight="@dimen/padding_double"
        android:paddingBottom="@dimen/padding_standard"
        android:text="@string/status_declining"
        android:textColor="@color/species_background_yellow"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/legend_1"
        app:layout_constraintRight_toLeftOf="@id/legend_3"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

    <TextView
        android:id="@+id/legend_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:paddingLeft="@dimen/padding_double"
        android:paddingTop="@dimen/padding_standard"
        android:paddingRight="@dimen/padding_double"
        android:paddingBottom="@dimen/padding_standard"
        android:text="@string/status_adbundant"
        android:textColor="@color/species_background_green"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/legend_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

    <TextView
        android:id="@+id/legend_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:paddingLeft="@dimen/padding_double"
        android:paddingTop="@dimen/padding_standard"
        android:paddingRight="@dimen/padding_double"
        android:paddingBottom="@dimen/padding_standard"
        android:text="@string/status_banned"
        android:textColor="@color/species_background_grey"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/legend_5"
        app:layout_constraintTop_toBottomOf="@id/legend_1" />

    <TextView
        android:id="@+id/legend_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:paddingLeft="@dimen/padding_double"
        android:paddingTop="@dimen/padding_standard"
        android:paddingRight="@dimen/padding_double"
        android:paddingBottom="@dimen/padding_standard"
        android:text="@string/status_not_major_fishery"
        android:textColor="@color/species_background_blue"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/legend_4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/legend_1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/legend_4" />
</androidx.constraintlayout.widget.ConstraintLayout>