<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.FishFragment">


    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_margin="@dimen/padding_double"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_double"
        android:textSize="@dimen/xxlarge_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />


    <TextView
        android:id="@+id/sellers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_double"
        android:gravity="left"
        android:text="@string/sellers_label"
        android:textAlignment="gravity"
        android:textColor="@color/black_50_pct"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/seller_rating_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Seller" />

    <TextView
        android:id="@+id/seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black_90_pct"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="@id/sellers_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sellers_label"
        tools:text="Kumar" />

    <TextView
        android:id="@+id/seller_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_double"
        android:gravity="left"
        android:text="@string/seller_rating_label"
        android:textAlignment="gravity"
        android:textColor="@color/black_50_pct"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/catch_location_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sellers_label"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Rating" />

    <TextView
        android:id="@+id/seller_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"

        android:textColor="@color/black_90_pct"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/seller_rating_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/seller_rating_label"
        tools:text="4.3" />

    <TextView
        android:id="@+id/catch_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_double"
        android:gravity="left"
        android:text="@string/catch_location_label"
        android:textAlignment="gravity"
        android:textColor="@color/black_50_pct"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sell_location_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seller_rating_label"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Catch Location" />

    <TextView
        android:id="@+id/catch_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black_90_pct"
        android:textSize="@dimen/large_text_size"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="@id/catch_location_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/catch_location_label"
        app:layout_constraintWidth_percent="0.5"
        tools:text="Juhu Beach" />

    <TextView

        android:id="@+id/sell_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_double"
        android:gravity="left"
        android:text="@string/sell_location_label"
        android:textAlignment="gravity"
        android:textColor="@color/black_50_pct"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/price_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catch_location_label"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Sell Location" />

    <TextView
        android:lines="1"
        android:ellipsize="end"
        android:id="@+id/sell_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black_90_pct"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="@id/sell_location_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sell_location_label"
        app:layout_constraintWidth_percent="0.5"
        tools:text="RK Nagar" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_double"
        android:gravity="left"
        android:text="@string/price_label"
        android:textAlignment="gravity"
        android:textColor="@color/black_50_pct"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/availability_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sell_location_label"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Price per Kg" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="@color/black_90_pct"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="@id/price_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/price_label"
        tools:text="100" />

    <TextView
        android:id="@+id/availability_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_double"
        android:gravity="left"
        android:text="@string/availability_label"
        android:textAlignment="gravity"
        android:textColor="@color/black_50_pct"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/qty_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_label"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Available" />

    <TextView
        android:id="@+id/availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:textAlignment="gravity"

        android:textColor="@color/black_90_pct"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="@id/availability_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/availability_label"
        tools:text="20 Kg" />

    <TextView
        android:id="@+id/qty_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_quadruple"
        android:gravity="left"
        android:text="@string/qty_label"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/total_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/availability_label"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Buy" />


    <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="@dimen/padding_standard"
        android:orientation="horizontal"
        android:textColor="@color/black"
        app:snp_buttonPaddingRight="0dp"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/qty_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/qty_label"
        app:snp_value_text_color="@color/black"
        app:snp_value_text_size="@dimen/xlarge_text_size"
        tools:text="20 Kg" />

    <TextView
        android:id="@+id/total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_quadruple"
        android:gravity="left"
        android:text="@string/total_label"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/order"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qty_label"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Buy" />

    <TextView
        android:id="@+id/total"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_double"
        android:gravity="right"
        android:inputType="number"

        android:text="0"
        android:textAlignment="gravity"
        android:textColor="@color/black_90_pct"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/total_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/total_label"
        tools:text="20 Kg" />


    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_double"
        android:paddingLeft="@dimen/padding_triple"
        android:paddingTop="@dimen/padding_double"
        android:textColor="@color/white"
        android:paddingRight="@dimen/padding_triple"
        android:paddingBottom="@dimen/padding_double"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_double"
        android:paddingLeft="@dimen/padding_triple"
        android:paddingTop="@dimen/padding_double"
        android:paddingRight="@dimen/padding_triple"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/padding_double"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/order" />


</androidx.constraintlayout.widget.ConstraintLayout>

